kubernetes/manifests/springboot-emp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  namespace: emp
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: springboot.dev.neysho.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-svc
                port:
                  number: 8080
    - host: emp.dev.neysho.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular.svc
                port:
                  number: 80
